# rugix-testkit

./: .gitignore  README.md  justfile  pyproject.toml
src/rugix_testkit/: __init__.py  __main__.py  result.py  rugix.py  types.py
src/rugix_testkit/qemu/: __init__.py  config.py  handle.py  ssh.py  vm.py
tests/: test_config.py  test_vm.py
