[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rugix-testkit"
version = "0.0.0"
description = "Testing toolkit for Rugix."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["fabric>=3.0"]

[project.urls]
homepage = "https://github.com/rugix/rugix-testkit"
repository = "https://github.com/rugix/rugix-testkit"

[project.scripts]
rugix-testkit = "rugix_testkit.__main__:main"

[dependency-groups]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/rugix_testkit"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["fabric.*", "paramiko.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
